--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta property="og:title" content="Ecourse Web Development - Transform Your Future">
     <meta property="og:description" content="Master web development from novice to pro with our comprehensive online course. Join thousands of successful developers today!">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="stylesheet" href="https://cdn.tailwindcss.com">
-    <link href="/dist/styles.min.css" rel="stylesheet">
+    <link href="src/output.css" rel="stylesheet">
     <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
