--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
 
         <!-- Header -->
-        <header id="home" class="bg-blue-600 py-40 bg-cover bg-center" style="background-image: url('path-to-optimized-header-image.webp');">
+        <header id="home" class="bg-blue-600 py-40 bg-cover bg-center" style="background-image: url('src/img/bg.jpeg');">
             <div class="container mx-auto px-4">
-                <div class="max-w-3xl mx-auto text-center">
+                <div class="max-w-3xl mx-auto text-center text-white">
                     <h1 class="text-4xl md:text-6xl font-bold mb-6">Unlock the Skills You Need to Thrive in Web Development!</h1>
                     <p class="text-xl md:text-2xl font-semibold mb-8">Join thousands of learners who are advancing their careers with expert-led, immersive online courses.</p>
                     <a href="#" class="bg-yellow-500 text-blue-900 font-bold py-3 px-8 rounded-full hover:bg-yellow-400 transition duration-300 text-lg">Start Learning Today</a>
