--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transform Your Future with Our Online Course</title>
+    <title>Ecourse | BahasKoding</title>
     <meta name="description" content="Master web development from novice to pro with our comprehensive online course. Join thousands of successful developers today!">
     <meta property="og:title" content="Ecourse Web Development - Transform Your Future">
     <meta property="og:description" content="Master web development from novice to pro with our comprehensive online course. Join thousands of successful developers today!">
@@ -23,7 +23,7 @@
         <nav class="bg-blue-600 text-white fixed w-full z-10 transition-all duration-300" id="navbar">
             <div class="container mx-auto px-4">
                 <div class="flex justify-between items-center py-4">
-                    <a href="#home" class="text-2xl font-bold">Ecourse Web Development</a>
+                    <a href="#home" class="text-2xl font-bold">BahasKoding</a>
                     <div class="hidden md:flex space-x-8">
                         <a href="#home" class="hover:text-yellow-400 transition duration-300">Home</a>
                         <a href="#features" class="hover:text-yellow-400 transition duration-300">Features</a>
