little bit update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecourse | BahasKoding</title>
+    <title>Landing Page Ecourse | BahasKoding</title>
     <meta name="description" content="Master web development from novice to pro with our comprehensive online course. Join thousands of successful developers today!">
     <meta property="og:title" content="Ecourse Web Development - Transform Your Future">
     <meta property="og:description" content="Master web development from novice to pro with our comprehensive online course. Join thousands of successful developers today!">
